--- a/g5Mindr/g5Mindr/Cells/g5ConditionTableViewCell.xib
+++ b/g5Mindr/g5Mindr/Cells/g5ConditionTableViewCell.xib
@@ -12,42 +12,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="g5ConditionTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="g5ConditionTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iF5-5Z-djt" userLabel="Background Image">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aTM-A0-geK" userLabel="View - Separator">
-                        <rect key="frame" x="0.0" y="78" width="320" height="1"/>
-                        <color key="backgroundColor" red="0.22352941176470587" green="0.33333333333333331" blue="0.45098039215686275" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="0.0" y="98" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.36078431372549019" green="0.47843137254901957" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="RiL-qm-vMk"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wb7-sG-iys" userLabel="Icon Image">
-                        <rect key="frame" x="20" y="20" width="40" height="40"/>
+                        <rect key="frame" x="20" y="30" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="N9K-xX-nzQ"/>
                             <constraint firstAttribute="width" constant="40" id="b8b-P9-qDn"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ga2-Lj-lva" userLabel="Label - Title">
-                        <rect key="frame" x="68" y="29" width="187" height="22"/>
+                        <rect key="frame" x="75" y="42" width="180" height="16"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="22" id="aBe-Oz-kcw"/>
+                            <constraint firstAttribute="height" constant="16" id="aBe-Oz-kcw"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="ProximaNovaSoftW03-Bold" family="ProximaNovaSoftW03-Bold" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <switch hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bZz-qG-pb2">
-                        <rect key="frame" x="263" y="24" width="51" height="31"/>
+                        <rect key="frame" x="263" y="34" width="51" height="31"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="31" id="HIw-2f-ndc"/>
                             <constraint firstAttribute="width" constant="49" id="NlD-VJ-iIC"/>
@@ -56,11 +56,11 @@
                         <color key="thumbTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </switch>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MSn-1X-6ND" userLabel="View - Custom Switch" customClass="OnSwitchView">
-                        <rect key="frame" x="263" y="24" width="49" height="31"/>
+                        <rect key="frame" x="263" y="34" width="49" height="31"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QvU-aJ-30c">
-                        <rect key="frame" x="263" y="24" width="49" height="31"/>
+                        <rect key="frame" x="263" y="34" width="49" height="31"/>
                         <connections>
                             <action selector="didPressSwitchButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7uM-Vc-KUB"/>
                         </connections>
@@ -70,7 +70,7 @@
                 <constraints>
                     <constraint firstItem="wb7-sG-iys" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="1sF-lx-p73"/>
                     <constraint firstItem="iF5-5Z-djt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="4c7-fX-FOW"/>
-                    <constraint firstItem="Ga2-Lj-lva" firstAttribute="leading" secondItem="wb7-sG-iys" secondAttribute="trailing" constant="8" id="5Q8-3h-fJ9"/>
+                    <constraint firstItem="Ga2-Lj-lva" firstAttribute="leading" secondItem="wb7-sG-iys" secondAttribute="trailing" constant="15" id="5Q8-3h-fJ9"/>
                     <constraint firstItem="MSn-1X-6ND" firstAttribute="centerX" secondItem="bZz-qG-pb2" secondAttribute="centerX" id="5ej-NB-4V0"/>
                     <constraint firstAttribute="bottom" secondItem="aTM-A0-geK" secondAttribute="bottom" id="CC3-Iq-0bV"/>
                     <constraint firstItem="iF5-5Z-djt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Di4-Sh-Xqj"/>
@@ -79,6 +79,7 @@
                     <constraint firstItem="QvU-aJ-30c" firstAttribute="height" secondItem="MSn-1X-6ND" secondAttribute="height" id="Kb5-VJ-tQ0"/>
                     <constraint firstItem="bZz-qG-pb2" firstAttribute="leading" secondItem="Ga2-Lj-lva" secondAttribute="trailing" constant="8" id="MJo-cq-kNt"/>
                     <constraint firstAttribute="trailing" secondItem="iF5-5Z-djt" secondAttribute="trailing" id="Mew-hg-hBI"/>
+                    <constraint firstItem="wb7-sG-iys" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="PNG-Ty-shB"/>
                     <constraint firstItem="QvU-aJ-30c" firstAttribute="centerX" secondItem="MSn-1X-6ND" secondAttribute="centerX" id="U2T-Tg-McC"/>
                     <constraint firstItem="bZz-qG-pb2" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Ulw-XF-7R9"/>
                     <constraint firstItem="MSn-1X-6ND" firstAttribute="height" secondItem="bZz-qG-pb2" secondAttribute="height" id="VQn-b6-87K"/>
@@ -91,6 +92,11 @@
                     <constraint firstAttribute="bottom" secondItem="iF5-5Z-djt" secondAttribute="bottom" id="ylw-C3-wbf"/>
                     <constraint firstItem="bZz-qG-pb2" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="zsc-Ie-Srw"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="1sF-lx-p73"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
