--- a/g5Mindr/g5Mindr/Cells/g5DayOfTheWeekConditionTableViewCell.xib
+++ b/g5Mindr/g5Mindr/Cells/g5DayOfTheWeekConditionTableViewCell.xib
@@ -12,26 +12,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="g5DayOfTheWeekConditionTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="61" id="KGk-i7-Jjw" customClass="g5DayOfTheWeekConditionTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView hidden="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1aZ-gR-3gf" userLabel="Background">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oPL-R7-mfI">
-                        <rect key="frame" x="0.0" y="42" width="320" height="1"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oPL-R7-mfI" userLabel="Separator">
+                        <rect key="frame" x="0.0" y="59" width="320" height="1"/>
                         <color key="backgroundColor" red="0.36078431370000003" green="0.47843137250000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="jbh-sG-j1Q"/>
                         </constraints>
                     </view>
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark_gold" translatesAutoresizingMaskIntoConstraints="NO" id="JBT-h3-kLh">
+                        <rect key="frame" x="282" y="20" width="20" height="20"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="6if-va-9xT"/>
+                            <constraint firstAttribute="height" constant="20" id="Dbv-Fr-F2t"/>
+                        </constraints>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRm-z8-6CL">
-                        <rect key="frame" x="20" y="10" width="256" height="24"/>
+                        <rect key="frame" x="20" y="18" width="254" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="nPX-c1-ybP"/>
                         </constraints>
@@ -39,30 +47,32 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JBT-h3-kLh">
-                        <rect key="frame" x="288" y="10" width="24" height="24"/>
-                        <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="24" id="6if-va-9xT"/>
-                            <constraint firstAttribute="height" constant="24" id="Dbv-Fr-F2t"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="JBT-h3-kLh" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="9P7-JN-OBD"/>
+                    <constraint firstAttribute="trailing" secondItem="JBT-h3-kLh" secondAttribute="trailing" constant="18" id="2PP-fM-hWB"/>
+                    <constraint firstItem="JBT-h3-kLh" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="18" id="9P7-JN-OBD"/>
                     <constraint firstItem="oPL-R7-mfI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="9RL-YR-dbJ"/>
                     <constraint firstAttribute="bottom" secondItem="oPL-R7-mfI" secondAttribute="bottom" id="ARC-9e-oG0"/>
                     <constraint firstItem="1aZ-gR-3gf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="DL7-Ul-x8q"/>
                     <constraint firstAttribute="trailing" secondItem="oPL-R7-mfI" secondAttribute="trailing" id="DWu-Cz-hi7"/>
-                    <constraint firstItem="JBT-h3-kLh" firstAttribute="leading" secondItem="hRm-z8-6CL" secondAttribute="trailing" constant="12" id="TN4-3k-ZvO"/>
+                    <constraint firstItem="JBT-h3-kLh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="310" id="FYy-X6-yIw"/>
+                    <constraint firstItem="JBT-h3-kLh" firstAttribute="leading" secondItem="hRm-z8-6CL" secondAttribute="trailing" constant="8" id="TN4-3k-ZvO"/>
                     <constraint firstItem="hRm-z8-6CL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="cia-jn-73f"/>
                     <constraint firstItem="JBT-h3-kLh" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="f8e-z6-p9g"/>
                     <constraint firstItem="1aZ-gR-3gf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="twi-mn-c01"/>
+                    <constraint firstItem="hRm-z8-6CL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="uBv-n0-x9d"/>
                     <constraint firstAttribute="bottom" secondItem="1aZ-gR-3gf" secondAttribute="bottom" id="xzf-I1-RDy"/>
                     <constraint firstItem="hRm-z8-6CL" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="y3w-NR-zxO"/>
                     <constraint firstAttribute="trailing" secondItem="1aZ-gR-3gf" secondAttribute="trailing" id="z2f-hF-VUi"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="cia-jn-73f"/>
+                        <exclude reference="9P7-JN-OBD"/>
+                        <exclude reference="FYy-X6-yIw"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
@@ -72,4 +82,7 @@
             </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="checkmark_gold" width="20" height="20"/>
+    </resources>
 </document>
