--- a/g5Mindr/g5Mindr/ViewControllers/MDRReminderList.storyboard
+++ b/g5Mindr/g5Mindr/ViewControllers/MDRReminderList.storyboard
@@ -217,6 +217,10 @@
         <scene sceneID="zrr-el-Z5n">
             <objects>
                 <viewController id="xw8-t4-CIb" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I32-9T-5O3"/>
+                        <viewControllerLayoutGuide type="bottom" id="zS9-Ob-CMr"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="aHd-Rk-taN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
