--- a/g5Mindr/g5Mindr/Cells/g5WeatherTypeConditionTableViewCell.xib
+++ b/g5Mindr/g5Mindr/Cells/g5WeatherTypeConditionTableViewCell.xib
@@ -12,26 +12,26 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" shouldIndentWhileEditing="NO" rowHeight="90" id="KGk-i7-Jjw" customClass="g5WeatherTypeConditionTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" shouldIndentWhileEditing="NO" rowHeight="100" id="KGk-i7-Jjw" customClass="g5WeatherTypeConditionTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView hidden="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lww-xR-ykA" userLabel="Background">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y8g-WV-KJR">
-                        <rect key="frame" x="20" y="25" width="40" height="40"/>
+                        <rect key="frame" x="20" y="30" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="iBx-RK-mEh"/>
                             <constraint firstAttribute="width" constant="40" id="uaX-bn-zlx"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JiA-9Y-aWv">
-                        <rect key="frame" x="72" y="34" width="228" height="21"/>
+                        <rect key="frame" x="72" y="39" width="228" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="dhK-nu-yfU"/>
                         </constraints>
@@ -40,14 +40,18 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KUh-jM-UdH">
-                        <rect key="frame" x="0.0" y="88" width="320" height="1"/>
+                        <rect key="frame" x="0.0" y="98" width="320" height="1"/>
                         <color key="backgroundColor" red="0.36078431372549019" green="0.47843137254901957" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="KjG-H8-7We"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oyM-Ah-9kS">
-                        <rect key="frame" x="228" y="17" width="64" height="48"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark_gold" translatesAutoresizingMaskIntoConstraints="NO" id="oyM-Ah-9kS" userLabel="Check Mark Image View">
+                        <rect key="frame" x="282" y="40" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="gnw-QR-3DK"/>
+                            <constraint firstAttribute="height" constant="20" id="zeS-cj-0oG"/>
+                        </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
@@ -65,6 +69,7 @@
                     <constraint firstItem="oyM-Ah-9kS" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="kxp-Ko-aKL"/>
                     <constraint firstAttribute="bottom" secondItem="KUh-jM-UdH" secondAttribute="bottom" id="nuC-Sy-bfr"/>
                     <constraint firstAttribute="trailingMargin" secondItem="JiA-9Y-aWv" secondAttribute="trailing" constant="12" id="q9f-Bx-Gty"/>
+                    <constraint firstAttribute="trailing" secondItem="oyM-Ah-9kS" secondAttribute="trailing" constant="18" id="qu1-81-Wx5"/>
                     <constraint firstItem="lww-xR-ykA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ult-HT-vgU"/>
                 </constraints>
                 <variation key="default">
@@ -77,9 +82,14 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="background" destination="lww-xR-ykA" id="3RC-yx-U1R"/>
+                <outlet property="checkMarkImageView" destination="oyM-Ah-9kS" id="hjY-Mw-6do"/>
                 <outlet property="weatherImage" destination="Y8g-WV-KJR" id="0B5-rn-yYn"/>
                 <outlet property="weatherLabel" destination="JiA-9Y-aWv" id="9hj-8Q-DkW"/>
             </connections>
+            <point key="canvasLocation" x="397" y="346"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="checkmark_gold" width="20" height="20"/>
+    </resources>
 </document>
