--- a/g5Mindr/g5Mindr/ViewControllers/ConditionViewController/MDRTimeCondition.storyboard
+++ b/g5Mindr/g5Mindr/ViewControllers/ConditionViewController/MDRTimeCondition.storyboard
@@ -15,7 +15,7 @@
         <!--Time Condition View Controller-->
         <scene sceneID="fGH-1d-Q4F">
             <objects>
-                <viewController id="ciH-P4-xzl" customClass="g5TimeConditionViewController" sceneMemberID="viewController">
+                <viewController id="ciH-P4-xzl" customClass="MDRTimeConditionViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xTo-Kn-rgw"/>
                         <viewControllerLayoutGuide type="bottom" id="a15-Xd-8PN"/>
@@ -261,9 +261,9 @@
                                                 <constraint firstAttribute="height" constant="1" id="Kzh-zh-cVT"/>
                                             </constraints>
                                         </view>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aqF-N1-3aW">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add_new_time" translatesAutoresizingMaskIntoConstraints="NO" id="aqF-N1-3aW">
                                             <rect key="frame" x="20" y="15" width="20" height="20"/>
-                                            <color key="backgroundColor" red="1" green="0.99735954400000004" blue="0.057499010289999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="20" id="pA1-3f-Q5i"/>
                                                 <constraint firstAttribute="width" constant="20" id="zrZ-R1-AoQ"/>
@@ -303,6 +303,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="add_new_time" width="20" height="20"/>
         <image name="background" width="375" height="667"/>
     </resources>
 </document>
